--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,7 +36,6 @@ monitor = DP-3, preferred, -1920x0, 1
 monitor =, preferred,auto,auto
 
 # STARTUP
-exec-once = bash ~/.config/scripts/hyprland-plugin-script.sh
 exec-once = hypridle
 exec-once = wbg $wallpaper
 exec-once = waybar
@@ -100,11 +99,6 @@ input {
 decoration {
     rounding = 0
     
-    # drop_shadow = false
-    # shadow_range = 10
-    # shadow_render_power = 2
-    # col.shadow = rgba($color13ee)
-    
     active_opacity = 1.0
     inactive_opacity = 0.8
     
@@ -129,21 +123,15 @@ dwindle {
     preserve_split = true 
 }
 
-#master {
-#    new_is_master = true
-#}
 
 misc {
     disable_hyprland_logo = true
-    # force_hypr_chan = true
-    # enable_swallow = false
-    # swallow_regex = ^(foot)$
     vfr = true
 }
 
 general {
-    gaps_in = 5
-    gaps_out = 10
+    gaps_in = 1
+    gaps_out = 5
     border_size = 2
     col.active_border = rgba($color1DD)
     col.inactive_border = rgba($color14DD)
@@ -151,29 +139,20 @@ general {
     resize_on_border = true
 }
 windowrulev2 = bordercolor rgba($color9DD),fullscreen:1
-windowrulev2 = plugin:hyprbars:bar_color rgba($color9DD),fullscreen:1
-
 windowrulev2 = bordercolor rgba($color2DD),floating:1
-windowrulev2 = plugin:hyprbars:bar_color rgba($color2DD),floating:1
 
 # WINDOW RULES
 
 $spd_opacity = 0.9
-#windowrule = opacity $spd_opacity, ^(foot)$
+windowrule = opacity $spd_opacity, ^(foot)$
 windowrule = opacity $spd_opacity, ^(org.pwmt.zathura)$
 
 windowrule = pseudo, fcitx
-
-# windowrule = float,                 ^(jetbrains-idea-ce)$
-# windowrule = plugin:hyprbars:nobar, ^(jetbrains-idea-ce)$
-# windowrule = center,                ^(jetbrains-idea-ce)$
-# windowrule = noborder,              ^(jetbrains-idea-ce)$
 
 windowrule = float,                 ^(wofi)$
 windowrule = dimaround,             ^(wofi)$
 windowrule = center,                ^(wofi)$
 windowrule = noborder,              ^(wofi)$
-windowrule = plugin:hyprbars:nobar, ^(wofi)$
 
 windowrule = float,                 ^(spotify)$
 windowrule = dimaround,             ^(spotify)$
@@ -388,32 +367,6 @@ gestures {
 }
 
 plugin {
-    hyprbars {
-        bar_height = 30
-        bar_color = rgba($color14DD)
-        bar_precedence_over_border = 1
-        bar_part_of_window = 1
-        # bar_color -> (col) bar's background color
-        # bar_height -> (int) bar's height (default 15)
-        # col.text -> (col) bar's title text color
-        # bar_title_enabled -> (bool) whether to render the title (default true)
-        # bar_text_size -> (int) bar's title text font size (default 10)
-        # bar_text_font -> (str) bar's title text font (default Sans)
-        # bar_text_align -> (str) bar's title text alignment (default center, can also be left)
-        # bar_buttons_alignment -> (str) bar's buttons alignment (default: right, can also be left)
-        # bar_part_of_window -> (bool) whether the bar is a part of the main window (if it is, stuff like shadows render around it)
-        # bar_precedence_over_border -> (bool) whether the bar should have a higher priority than the border (border will be around the bar)
-        # bar_padding -> (int) left / right edge padding (default 7)
-        # bar_button_padding -> (int) padding between the buttons (default 5)
-
-        # example buttons (R -> L)
-        # hyprbars-button = color, size, on-click
-
-        hyprbars-button = rgb($color5), 20, 󰖭, hyprctl dispatch exec ~/.config/scripts/selective_kill.sh
-        hyprbars-button = rgb($color3), 20, , hyprctl dispatch fullscreen 1
-        hyprbars-button = rgb($color3), 20, , hyprctl dispatch movetoworkspacesilent special:$scratchpad_name
-        hyprbars-button = rgb($color3), 20, 󰉈, hyprctl --batch "dispatch togglefloating; dispatch resizeactive exact 70% 70%; dispatch centerwindow; "
-    }
     touch_gestures {
         sensitivity = 5.0
         long_press_delay = 1000
