--- a/.config/fcitx5/conf/clipboard.conf
+++ b/.config/fcitx5/conf/clipboard.conf
@@ -1,3 +1,5 @@
+# Trigger Key
+TriggerKey=
 # Paste Primary
 PastePrimaryKey=
 # Number of entries
@@ -8,7 +10,4 @@ IgnorePasswordFromPasswordManager=True
 ShowPassword=True
 # Seconds before clearing password
 ClearPasswordAfter=30
-
-[TriggerKey]
-0=Control+Shift+V
 
