--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -108,7 +108,7 @@ decoration {
 }
 
 animations {
-    enabled = true
+    enabled = false
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows,        1, 7,   myBezier
     animation = windowsOut,     1, 5,   default, popin 80%
@@ -119,8 +119,8 @@ animations {
 }
 
 dwindle {
-    pseudotile = true 
-    preserve_split = true 
+    pseudotile = false 
+    preserve_split = false 
 }
 
 
@@ -181,23 +181,19 @@ windowrule = tag +scratchpad_window, ^(brave-open.spotify.com.+)$
 windowrule = tag +scratchpad_window, ^(brave-web.whatsapp.com.+)$
 
 
-# KEY BINDINGS
-
-$mainMod = SUPER
-
 # GLOBAL KEYS
 
-bind = $mainMod SHIFT, C,      exec,             hyprctl reload
-bind = $mainMod SHIFT, Q,      killactive, 
-bind = $mainMod SHIFT, T,      exec,             ~/.config/scripts/animations.sh toggle
-bind = $mainMod SHIFT, O,      pseudo, 
-bind = $mainMod,       V,      exec,             $menu_paste
-bind = $mainMod,       Return, exec,             $term
-bind = $mainMod,       E,      exec,             $filebrowser
-bind = $mainMod,       B,      exec,             $webbrowser
-bind = $mainMod,       N,      exec,             swaync-client -t -sw
-bind = $mainMod,       Escape, exec,             $powermenu
-bind = $mainMod,       Tab,    togglesplit, 
+bind = SUPER SHIFT, C,      exec,             hyprctl reload
+bind = SUPER SHIFT, Q,      killactive, 
+bind = SUPER SHIFT, T,      exec,             ~/.config/scripts/animations.sh toggle
+bind = SUPER SHIFT, O,      pseudo, 
+bind = SUPER,       V,      exec,             $menu_paste
+bind = SUPER,       Return, exec,             $term
+bind = SUPER,       E,      exec,             $filebrowser
+bind = SUPER,       B,      exec,             $webbrowser
+bind = SUPER,       N,      exec,             swaync-client -t -sw
+bind = SUPER,       Escape, exec,             $powermenu
+bind = SUPER,       Tab,    togglesplit, 
 bind = ALT,            Space,  exec,             $launcher1
 bind = ALT,            Tab,    cyclenext, 
 bind = ALT,            Tab,    bringactivetotop, 
@@ -206,13 +202,11 @@ bind = ALT      SHIFT, Tab,    bringactivetotop,
 
 # FUNCTION BUTTONS
 
-bindm= $mainMod, mouse:272,                     movewindow
-bindm= $mainMod, mouse:273,                     resizewindow
 # This only triggers when turning camera around
 # bindl=,          switch[HP WMI camera shutter], exec,         notify-send.sh test
 
-bindm= $mainMod, mouse:272,                     movewindow
-bindm= $mainMod, mouse:273,                     resizewindow
+bindm= SUPER, mouse:272,                     movewindow
+bindm= SUPER, mouse:273,                     resizeactive
 bindl=,          XF86MonBrightnessUp,           exec,         $brightness up 5
 bindl=,          XF86MonBrightnessDown,         exec,         $brightness down 5
 bindl=,          XF86AudioMute,                 exec,         $volume mute
@@ -233,13 +227,13 @@ bind = SHIFT,    F11,                           exec,         playerctl position
 
 bind=CONTROL SHIFT,Print, exec, $printscr_sw
 bind=SHIFT,Print, exec, $printscr_ss
-bind=$mainMod, Print, exec, $printscr_f
+bind=SUPER, Print, exec, $printscr_f
 bind=,Print, exec, $printscr_sf
 
 # MODES
 
 # bindr=,          swipe:4:u, submap, resize
-bind = $mainMod, W,         submap, resize
+bind = SUPER, W,         submap, resize
 submap = resize
     bind =,         W,      cyclenext, 
     bind =,         W,      bringactivetotop, 
@@ -263,6 +257,7 @@ submap = resize
     bind =,         Space,  togglefloating, 
     bind =,         Space,  centerwindow, 
     bind =,         Space,  submap, reset
+
     bind =,         C,      centerwindow, 
     bind =,         C,      submap, reset
 
@@ -281,10 +276,10 @@ submap = resize
     bind =, swipe:3:u,      movewindow,   u
     bind =, swipe:3:d,      movewindow,   d
 
-    bind = CONTROL, h,      resizeactive, l
-    bind = CONTROL, l,      resizeactive, r
-    bind = CONTROL, k,      resizeactive, u
-    bind = CONTROL, j,      resizeactive, d
+    bind = CONTROL, h,      resizeactive, -10 0
+    bind = CONTROL, l,      resizeactive, 10 0
+    bind = CONTROL, k,      resizeactive, 0 -10
+    bind = CONTROL, j,      resizeactive, 0 10
 
     bind =,         1,      workspace, 1
     bind =,         2,      workspace, 2
@@ -310,52 +305,52 @@ submap = resize
     bind = SHIFT,   Period, movetoworkspacesilent, r+1
 
     bindm=,         mouse:272,   movewindow
-    bindm=,         mouse:273,   resizewindow
+    bindm=,         mouse:273,   resizeactive
     bindm=,         longpress:1, movewindow
-    bindm=,         longpress:2, resizewindow
+    bindm=,         longpress:2, resizeactive
     bind =,         tap:3,       togglefloating, 
 #bind =,         tap:4,       submap,         reset
     bindr = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
     bindr =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
 
     bind =,          Escape, submap, reset
-    bind = $mainMod, W,      submap, reset
+    bind = SUPER, W,      submap, reset
 submap = reset
 
 # WORKSPACE AND WINDOWS
 
-bind = $mainMod, 1,          workspace, 1
-bind = $mainMod, 2,          workspace, 2
-bind = $mainMod, 3,          workspace, 3
-bind = $mainMod, 4,          workspace, 4
-bind = $mainMod, 5,          workspace, 5
-bind = $mainMod, 6,          workspace, 6
-bind = $mainMod, 7,          workspace, 7
-bind = $mainMod, 8,          workspace, 8
-bind = $mainMod, 9,          workspace, 9
-bindr= $mainMod, 0,          exec,      ~/.config/scripts/swap_scratchpad.sh
-bind = $mainMod, Comma,      workspace, r-1
-bind = $mainMod, Period,     workspace, r+1
-bind = $mainMod, mouse_down, workspace, e+1
-bind = $mainMod, mouse_up,   workspace, e-1
+bind = SUPER, 1,          workspace, 1
+bind = SUPER, 2,          workspace, 2
+bind = SUPER, 3,          workspace, 3
+bind = SUPER, 4,          workspace, 4
+bind = SUPER, 5,          workspace, 5
+bind = SUPER, 6,          workspace, 6
+bind = SUPER, 7,          workspace, 7
+bind = SUPER, 8,          workspace, 8
+bind = SUPER, 9,          workspace, 9
+bindr= SUPER, 0,          exec,      ~/.config/scripts/swap_scratchpad.sh
+bind = SUPER, Comma,      workspace, r-1
+bind = SUPER, Period,     workspace, r+1
+bind = SUPER, mouse_down, workspace, e+1
+bind = SUPER, mouse_up,   workspace, e-1
 
-bind = $mainMod SHIFT, 1, movetoworkspacesilent, 1
-bind = $mainMod SHIFT, 2, movetoworkspacesilent, 2
-bind = $mainMod SHIFT, 3, movetoworkspacesilent, 3
-bind = $mainMod SHIFT, 4, movetoworkspacesilent, 4
-bind = $mainMod SHIFT, 5, movetoworkspacesilent, 5
-bind = $mainMod SHIFT, 6, movetoworkspacesilent, 6
-bind = $mainMod SHIFT, 7, movetoworkspacesilent, 7
-bind = $mainMod SHIFT, 8, movetoworkspacesilent, 8
-bind = $mainMod SHIFT, 9, movetoworkspacesilent, 9
-bindr= $mainMod SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
-bind = $mainMod SHIFT, Comma, movetoworkspacesilent, r-1
-bind = $mainMod SHIFT, Period, movetoworkspacesilent, r+1
+bind = SUPER SHIFT, 1, movetoworkspacesilent, 1
+bind = SUPER SHIFT, 2, movetoworkspacesilent, 2
+bind = SUPER SHIFT, 3, movetoworkspacesilent, 3
+bind = SUPER SHIFT, 4, movetoworkspacesilent, 4
+bind = SUPER SHIFT, 5, movetoworkspacesilent, 5
+bind = SUPER SHIFT, 6, movetoworkspacesilent, 6
+bind = SUPER SHIFT, 7, movetoworkspacesilent, 7
+bind = SUPER SHIFT, 8, movetoworkspacesilent, 8
+bind = SUPER SHIFT, 9, movetoworkspacesilent, 9
+bindr= SUPER SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
+bind = SUPER SHIFT, Comma, movetoworkspacesilent, r-1
+bind = SUPER SHIFT, Period, movetoworkspacesilent, r+1
 
-bindm = $mainMod, mouse:272, movewindow
-bindm = $mainMod, mouse:273, resizewindow
-bindm = $mainMod, longpress:2, movewindow
-bindm = $mainMod, longpress:3, resizewindow
+bindm = SUPER, mouse:272, movewindow
+bindm = SUPER, mouse:273, resizeactive
+bindm = SUPER, longpress:2, movewindow
+bindm = SUPER, longpress:3, resizeactive
 
 # GESTURES
 
