--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,5 @@
 .config/Thunar/accels.scm
 .config/nixos/modules/nixvim-config
 .config/fcitx5/conf/cached_layouts
+.config/zsh/oh-my-posh-config.json.bak
+
