Use cyberdream theme

--- a/.config/foot/colors.ini
+++ b/.config/foot/colors.ini
@@ -1,32 +1,32 @@
 [colors]
 # alpha=1 | 0
-background=080C1C
-foreground=CCD6FF
+background=16181A
+foreground=FFFFFF
 
 ## Normal/regular colors (color palette 0-7)
-regular0=080C1C  # black
-regular1=FF007C  # red
-regular2=B5EE38  # green
-regular3=FF9E64  # yellow
-regular4=234B85  # blue
-regular5=BD98FF  # magenta
-regular6=8CFFFE  # cyan
-regular7=CCD6FF  # white
+regular0=16181A  # black
+regular1=FF6E5E  # red
+regular2=5EFF6C  # green
+regular3=F1FF5E  # yellow
+regular4=5EA1FF  # blue
+regular5=BD5EFF  # magenta
+regular6=5EF1FF  # cyan
+regular7=FFFFFF  # white
 
 ## Bright colors (color palette 8-15)
-bright0=394779   # bright black
-bright1=FF757F   # bright red
-bright2=00D9BD   # bright green
-bright3=FFC777   # bright yellow
-bright4=0057C4   # bright blue
-bright5=A86DFF   # bright magenta
-bright6=7DCFFF   # bright cyan
-bright7=4C5B91   # bright white
+bright0=3C4048   # bright black
+bright1=FF6E5E   # bright red
+bright2=5EFF6C   # bright green
+bright3=F1FF5E   # bright yellow
+bright4=5EA1FF   # bright blue
+bright5=BD5EFF   # bright magenta
+bright6=5EF1FF   # bright cyan
+bright7=FFFFFF   # bright white
 
 
 ## Misc colors
-selection-foreground=080C1C
-selection-background=CCD6FF
+selection-foreground=16181A
+selection-background=FFFFFF
 urls=00a8ba
 
 # vim: ft=dosini
