Change window border colors

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -133,13 +133,13 @@ general {
     gaps_in = 1
     gaps_out = 5
     border_size = 2
-    col.active_border = rgba($color1DD)
-    col.inactive_border = rgba($color14DD)
+    col.active_border = rgba($color2DD)
+    col.inactive_border = rgba($color6DD)
     layout = dwindle
     resize_on_border = true
 }
-windowrulev2 = bordercolor rgba($color9DD),fullscreen:1
-windowrulev2 = bordercolor rgba($color2DD),floating:1
+windowrulev2 = bordercolor rgba($color1DD),fullscreen:1
+windowrulev2 = bordercolor rgba($color5DD),floating:1
 
 # WINDOW RULES
 
@@ -205,23 +205,23 @@ bind = ALT      SHIFT, Tab,    bringactivetotop,
 # This only triggers when turning camera around
 # bindl=,          switch[HP WMI camera shutter], exec,         notify-send.sh test
 
-bindm= SUPER, mouse:272,                     movewindow
-bindm= SUPER, mouse:273,                     resizeactive
-bindl=,          XF86MonBrightnessUp,           exec,         $brightness up 5
-bindl=,          XF86MonBrightnessDown,         exec,         $brightness down 5
-bindl=,          XF86AudioMute,                 exec,         $volume mute
-bindl=,          XF86AudioLowerVolume,          exec,         $volume down 5
-bindl=,          XF86AudioRaiseVolume,          exec,         $volume up 5
-bind =,          XF86AudioMicMute,              exec,         wpctl set-mute @DEFAULT_SOURCE@ toggle
-bind =,          XF86AudioPrev,                 exec,         playerctl previous
-bind =,          XF86AudioNext,                 exec,         playerctl next
-bind =,          XF86AudioPlay,                 exec,         playerctl play-pause
-bind = SHIFT,    F9,                            exec,         playerctl position 5-
-bind = SHIFT,    F6,                            exec,         $volume down 1
-bind = SHIFT,    F7,                            exec,         $volume up 1
-bind = SHIFT,    F3,                            exec,         $brightness up 1
-bind = SHIFT,    F2,                            exec,         $brightness down 1
-bind = SHIFT,    F11,                           exec,         playerctl position 5+
+bindm = SUPER, mouse:272,                     movewindow
+bindm = SUPER, mouse:273,                     resizeactive
+bindle=,          XF86MonBrightnessUp,           exec,         $brightness up 5
+bindle=,          XF86MonBrightnessDown,         exec,         $brightness down 5
+bindle=,          XF86AudioMute,                 exec,         $volume mute
+bindle=,          XF86AudioLowerVolume,          exec,         $volume down 5
+bindle=,          XF86AudioRaiseVolume,          exec,         $volume up 5
+bind  =,          XF86AudioMicMute,              exec,         wpctl set-mute @DEFAULT_SOURCE@ toggle
+bind  =,          XF86AudioPrev,                 exec,         playerctl previous
+bind  =,          XF86AudioNext,                 exec,         playerctl next
+bind  =,          XF86AudioPlay,                 exec,         playerctl play-pause
+bind  = SHIFT,    F9,                            exec,         playerctl position 5-
+bind  = SHIFT,    F6,                            exec,         $volume down 1
+bind  = SHIFT,    F7,                            exec,         $volume up 1
+bind  = SHIFT,    F3,                            exec,         $brightness up 1
+bind  = SHIFT,    F2,                            exec,         $brightness down 1
+bind  = SHIFT,    F11,                           exec,         playerctl position 5+
 
 # PRINT SCREEN
 
@@ -276,10 +276,10 @@ submap = resize
     bind =, swipe:3:u,      movewindow,   u
     bind =, swipe:3:d,      movewindow,   d
 
-    bind = CONTROL, h,      resizeactive, -10 0
-    bind = CONTROL, l,      resizeactive, 10 0
-    bind = CONTROL, k,      resizeactive, 0 -10
-    bind = CONTROL, j,      resizeactive, 0 10
+    binde = CONTROL, h,      resizeactive, -10 0
+    binde = CONTROL, l,      resizeactive, 10 0
+    binde = CONTROL, k,      resizeactive, 0 -10
+    binde = CONTROL, j,      resizeactive, 0 10
 
     bind =,         1,      workspace, 1
     bind =,         2,      workspace, 2
