--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -37,7 +37,8 @@ monitor =, preferred,auto,auto
 
 # STARTUP
 exec-once = hypridle
-exec-once = wbg $wallpaper
+exec-once = ~/.config/scripts/hyprland-plugin-script_2.sh
+exec-once = swaybg -i Pictures/Wallpaper/wallhaven-5g8r55.jpg  
 exec-once = waybar
 exec-once = iio-hyprland
 exec-once = dunst
@@ -47,13 +48,12 @@ exec-once = light -N 5
 exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = rfkill block bluetooth
-exec-once = ~/.config/scripts/start_ime.sh
-#exec-once = ~/.config/scripts/start_squeekboard.sh
 exec-once = hyprctl setcursor Banana 24
-exec-once = gio launch ~/.local/share/applications/whatsapp.desktop && sleep 2 && ~/.config/scripts/swap_scratchpad.sh
-exec-once = telegram-desktop && sleep 2 && ~/.config/scripts/swap_scratchpad.sh
-# exec-once = ibus-daemon --desktop=hyprland -d
+
+# exec-once = ~/.config/scripts/start_ime.sh
+# exec-once = ~/.config/scripts/start_squeekboard.sh
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
+# exec-once = ibus-daemon --desktop=hyprland -d
 # exec-once = gio launch .config/autostart/*
 
 # ENV VAR
@@ -79,7 +79,7 @@ env = WLR_RENDERER_ALLOW_SOFTWARE , 1 # enable software rendering for wlroots
 env = XCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,hyprland
 env = _JAVA_AWT_WM_NONREPARENTING,1
-# SETTINGS
+
 
 input {
     kb_layout = us
@@ -107,16 +107,6 @@ decoration {
     dim_around = 0.4
 }
 
-animations {
-    enabled = false
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-    animation = windows,        1, 7,   myBezier
-    animation = windowsOut,     1, 5,   default, popin 80%
-    animation = border,         1, 10,  myBezier
-    animation = borderangle,    1, 8,   default
-    animation = fade,           1, 7,   default
-    animation = workspaces,     1, 6,   default
-}
 
 dwindle {
     pseudotile = false 
@@ -138,6 +128,11 @@ general {
     layout = dwindle
     resize_on_border = true
 }
+
+plugin:overview {
+
+}
+
 windowrulev2 = bordercolor rgba($color1DD),fullscreen:1
 windowrulev2 = bordercolor rgba($color5DD),floating:1
 
@@ -193,12 +188,12 @@ bind = SUPER,       E,      exec,             $filebrowser
 bind = SUPER,       B,      exec,             $webbrowser
 bind = SUPER,       N,      exec,             swaync-client -t -sw
 bind = SUPER,       Escape, exec,             $powermenu
-bind = SUPER,       Tab,    togglesplit, 
-bind = ALT,            Space,  exec,             $launcher1
-bind = ALT,            Tab,    cyclenext, 
-bind = ALT,            Tab,    bringactivetotop, 
-bind = ALT      SHIFT, Tab,    cyclenext,        prev
-bind = ALT      SHIFT, Tab,    bringactivetotop, 
+bind = SUPER,       Tab,    overview:toggle, 
+bind = ALT,         Space,  exec,             $launcher1
+bind = ALT,         Tab,    cyclenext, 
+bind = ALT,         Tab,    bringactivetotop, 
+bind = ALT SHIFT,   Tab,    cyclenext,        prev
+bind = ALT SHIFT,   Tab,    bringactivetotop, 
 
 # FUNCTION BUTTONS
 
@@ -372,3 +367,47 @@ plugin {
         }
     }
 }
+
+# animations {
+#     enabled = false
+#     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+#     animation = windows,        1, 7,   myBezier
+#     animation = windowsOut,     1, 5,   default, popin 80%
+#     animation = border,         1, 10,  myBezier
+#     animation = borderangle,    1, 8,   default
+#     animation = fade,           1, 7,   default
+#     animation = workspaces,     1, 6,   default
+# }
+
+# hyprfocus {
+#     enabled = yes
+#     animate_floating = yes
+#     animate_workspacechange = yes
+#     focus_animation = shrink
+# 
+#     # Beziers for focus animations
+#     bezier = bezIn, 0.5,0.0,1.0,0.5
+#     bezier = bezOut, 0.0,0.5,0.5,1.0
+#     bezier = overshot, 0.05, 0.9, 0.1, 1.05
+#     bezier = smoothOut, 0.36, 0, 0.66, -0.56
+#     bezier = smoothIn, 0.25, 1, 0.5, 1
+#     bezier = realsmooth, 0.28,0.29,.69,1.08
+#     
+#     # Flash settings
+#     flash {
+#         flash_opacity = 0.95
+#         in_bezier = realsmooth
+#         in_speed = 0.5
+#         out_bezier = realsmooth
+#         out_speed = 3
+#     }
+# 
+#     # Shrink settings
+#     shrink {
+#         shrink_percentage = 0.95
+#         in_bezier = realsmooth
+#         in_speed = 1
+#         out_bezier = realsmooth
+#         out_speed = 2
+#     }
+# }
