--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -130,7 +130,14 @@ general {
 }
 
 plugin:overview {
-
+    panelColor = rgba($background55)
+    hideTopLayers = true
+    affectStrut = false
+    showEmptyWorkspace = false
+    autoDrag = false
+    switchOnDrop = true
+    exitOnSwitch = true
+    workspaceActiveBorder = rgba($color1FF)
 }
 
 windowrulev2 = bordercolor rgba($color1DD),fullscreen:1
