rearrange hyprland startups

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -36,12 +36,12 @@ monitor = DP-3, preferred, -1920x0, 1
 monitor =, preferred,auto,auto
 
 # STARTUP
-exec-once = hypridle
+exec-once = dunst
 exec-once = ~/.config/scripts/hyprland-plugin-script_2.sh
+exec-once = hypridle
 exec-once = swaybg -i Pictures/Wallpaper/wallhaven-5g8r55.jpg  
 exec-once = waybar
 exec-once = iio-hyprland
-exec-once = dunst
 exec-once = lxqt-policykit-agent
 exec-once = wl-paste --watch cliphist store
 exec-once = light -N 5
@@ -80,17 +80,18 @@ env = XCURSOR_SIZE,24
 env = XDG_CURRENT_DESKTOP,hyprland
 env = _JAVA_AWT_WM_NONREPARENTING,1
 
+exec-once = hyprctl dismissnotify
 
 input {
     kb_layout = us
 
-   follow_mouse = 1
+    follow_mouse = 1
 
-   touchpad {
-       natural_scroll = true
-       disable_while_typing = true
-       middle_button_emulation = true
-   }
+    touchpad {
+        natural_scroll = true
+        disable_while_typing = true
+        middle_button_emulation = true
+    }
 
     # -1.0 - 1.0, 0 means no modification.
     sensitivity = 0 
@@ -98,10 +99,10 @@ input {
 
 decoration {
     rounding = 0
-    
+
     active_opacity = 1.0
     inactive_opacity = 0.8
-    
+
     dim_inactive = true
     dim_strength = -0.2
     dim_around = 0.4
@@ -311,7 +312,7 @@ submap = resize
     bindm=,         longpress:1, movewindow
     bindm=,         longpress:2, resizeactive
     bind =,         tap:3,       togglefloating, 
-#bind =,         tap:4,       submap,         reset
+    #bind =,         tap:4,       submap,         reset
     bindr = SHIFT, 0, movetoworkspacesilent, special:$scratchpad_name
     bindr =,       0, exec, ~/.config/scripts/swap_scratchpad.sh
 
