--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -111,7 +111,7 @@ decoration {
 
 dwindle {
     pseudotile = false 
-    preserve_split = false 
+    preserve_split = true 
 }
 
 
@@ -196,7 +196,7 @@ bind = SUPER,       E,      exec,             $filebrowser
 bind = SUPER,       B,      exec,             $webbrowser
 bind = SUPER,       N,      exec,             swaync-client -t -sw
 bind = SUPER,       Escape, exec,             $powermenu
-bind = SUPER,       Tab,    overview:toggle, 
+bind = SUPER,       Tab,    layoutmsg,        togglesplit
 bind = ALT,         Space,  exec,             $launcher1
 bind = ALT,         Tab,    cyclenext, 
 bind = ALT,         Tab,    bringactivetotop, 
