Fix one_instance launching

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -246,6 +246,9 @@ submap = resize
     bind = SHIFT,   W,      bringactivetotop, 
     bind = SHIFT,   W,      submap, reset
 
+    bind = SUPER,   Q,      exec, $selective_kill
+    bind = SUPER,   Q,      submap, reset
+
     bind =,         Q,      exec, $selective_kill
     bind =,         Q,      submap, reset
 
