--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -49,8 +49,8 @@ exec-once = pulseaudio -D
 exec-once = blueman-applet
 exec-once = rfkill block bluetooth
 exec-once = hyprctl setcursor Banana 24
+exec-once = ~/.config/scripts/start_ime.sh
 
-# exec-once = ~/.config/scripts/start_ime.sh
 # exec-once = ~/.config/scripts/start_squeekboard.sh
 # exec-once = ~/.config/scripts/lisgd_touchscreen.sh
 # exec-once = ibus-daemon --desktop=hyprland -d
@@ -98,7 +98,7 @@ input {
 }
 
 decoration {
-    rounding = 0
+    rounding = 5
 
     active_opacity = 1.0
     inactive_opacity = 0.8
@@ -106,6 +106,12 @@ decoration {
     dim_inactive = true
     dim_strength = -0.2
     dim_around = 0.4
+
+    blur {
+        enabled = true
+        size = 8
+        passes = 2
+    }
 }
 
 
@@ -121,7 +127,7 @@ misc {
 }
 
 general {
-    gaps_in = 1
+    gaps_in = 2.5
     gaps_out = 5
     border_size = 2
     col.active_border = rgba($color2DD)
@@ -235,6 +241,9 @@ bind=,Print, exec, $printscr_sf
 
 # MODES
 
+submap = kill 
+submap = reset
+
 # bindr=,          swipe:4:u, submap, resize
 bind = SUPER, W,         submap, resize
 submap = resize
@@ -321,6 +330,8 @@ submap = resize
 
     bind =,          Escape, submap, reset
     bind = SUPER, W,      submap, reset
+
+    bind = , catchall, exec, hyprctl notify 4 1000 "rgb($color2)" "Unknown keymap!"
 submap = reset
 
 # WORKSPACE AND WINDOWS
