--- a/.config/waybar/config
+++ b/.config/waybar/config
@@ -1,52 +1,52 @@
-// vim:ft=json
+// vim:ft=js
 [
     {
-    //General
-    "layer": "top",
-    "position": "bottom",
-    "height": 40,
-    "spacing": 1,
-    "name": "waybar-bottom",
+        //General
+        "layer": "top",
+        "position": "bottom",
+        "height": 40,
+        "spacing": 1,
+        "name": "waybar-bottom",
 
-    //position
-    "modules-left": [
-        "custom/sp",
-        "battery", 
-        "backlight", 
-        "pulseaudio", 
-        "network", 
-        "temperature", 
-        "idle_inhibitor"
-    ],
-    "modules-center":[
-        "custom/media"
-    ],
-    "modules-right": [
-        "custom/weather",
-        "clock",
-        "custom/kb",
-    ],
-    "custom/media": {
-        "escape": false,
-        "return-type": "json",
-        "max-length": 40,
-        "on-click": "playerctl play-pause",
-        "on-click-right": "playerctl stop",
-        "smooth-scrolling-threshold": 10, 
-        "on-scroll-up": "playerctl next",
-        "on-scroll-down": "playerctl previous",
-        "exec" : "$HOME/.config/waybar/custom_modules/mediaplayer.sh",
-        "tooltip": true,
-    },
-    "custom/weather": {
-        "exec": "$HOME/.config/waybar/custom_modules/get_weather.sh Singapore",
-        "return-type": "json",
-        "format": "{}",
-        "tooltip": true,
-        "interval": 600
-    },
-    "clock": {
-        "tooltip-format": "<tt><big>{calendar}\n\nToday: {:%d %B %Y}</big></tt>",
+        //position
+        "modules-left": [
+            "custom/sp",
+            "battery", 
+            "backlight", 
+            "pulseaudio", 
+            "network", 
+            "temperature", 
+            "idle_inhibitor"
+        ],
+        "modules-center":[
+            "custom/media"
+        ],
+        "modules-right": [
+            "custom/weather",
+            "clock",
+            "custom/kb",
+        ],
+        "custom/media": {
+            "escape": false,
+            "return-type": "json",
+            "max-length": 40,
+            "on-click": "playerctl play-pause",
+            "on-click-right": "playerctl stop",
+            "smooth-scrolling-threshold": 10, 
+            "on-scroll-up": "playerctl next",
+            "on-scroll-down": "playerctl previous",
+            "exec" : "$HOME/.config/waybar/custom_modules/mediaplayer.sh",
+            "tooltip": true,
+        },
+        "custom/weather": {
+            "exec": "$HOME/.config/waybar/custom_modules/get_weather.sh Singapore",
+            "return-type": "json",
+            "format": "{}",
+            "tooltip": true,
+            "interval": 600
+        },
+        "clock": {
+            "tooltip-format": "<tt><big>{calendar}\n\nToday: {:%d %B %Y}</big></tt>",
             "calendar": {
                 "mode-mon-col"  : 3,
                 "weeks-pos"     : "right",
@@ -57,193 +57,200 @@
                     "today":      "<span color='#ff6699'><b><u>{}</u></b></span>"
                 }
             },
-        "format": "{:%d %B %Y - %H:%M %p}"
-    },
-    "network": {
-        "format-wifi": "{signalStrength}% {icon}",
-        "format-ethernet": "{ipaddr}/{cidr} 󰈁",
-        "tooltip-format": "{essid} on {ifname} 󱂇",
-        "format-linked": "{ifname} (No IP) 󰪎",
-        "format-disconnected": "Disconnected ⚠",
-        "format-alt": "{ifname}: {ipaddr}/{cidr}",
-        "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"]
-    },
-    "pulseaudio": {
-        "format": "{volume}% {icon} {format_source}",
-        "format-muted": "<span foreground='#AA2244'><b> </b></span> {format_source}",
-        "format-bluetooth": "{volume}% {icon}  {format_source}",
-        "format-bluetooth-muted": "<span foreground='#AA2244'><b> {icon}  {format_source}</b></span>",
-        "format-source": " {volume}% ",
-        "format-source-muted": "<span foreground='#AA2244'><b></b></span>",
-        "format-icons": {
-            "headphone": " ",
-            "hands-free": "󱆏 ",
-            "headset": "󰋎 ",
-            "phone": " ",
-            "portable": " ",
-            "car": " ",
-            "default": [" ", " ", " "]
+            "format": "{:%d %B %Y - %H:%M %p}"
         },
-        "on-click": "pavucontrol"
-    },
-    "idle_inhibitor": {
-        "format": "{icon}",
-        "format-icons": {
-            "activated": "<span foreground='#34AA44'><b></b></span>",
-            "deactivated": ""
+        "network": {
+            "format-wifi": "{signalStrength}% {icon}",
+            "format-ethernet": "{ipaddr}/{cidr} 󰈁",
+            "tooltip-format": "{essid} on {ifname} 󱂇",
+            "format-linked": "{ifname} (No IP) 󰪎",
+            "format-disconnected": "Disconnected ⚠",
+            "format-alt": "{ifname}: {ipaddr}/{cidr}",
+            "format-icons": ["󰤯", "󰤟", "󰤢", "󰤥", "󰤨"]
+        },
+        "pulseaudio": {
+            "format": "{volume}% {icon} {format_source}",
+            "format-muted": "<span foreground='#AA2244'><b></b></span> {format_source}",
+            "format-bluetooth": "{volume}% {icon}  {format_source}",
+            "format-bluetooth-muted": "<span foreground='#AA2244'><b> {icon}  {format_source}</b></span>",
+            "format-source": " {volume}% ",
+            "format-source-muted": "<span foreground='#AA2244'><b></b></span>",
+            "format-icons": {
+                "headphone": "",
+                "hands-free": "󱆏",
+                "headset": "󰋎",
+                "phone": "",
+                "portable": "",
+                "car": "",
+                "default": ["", "", ""]
+            },
+            "on-click": "pavucontrol"
+        },
+        "idle_inhibitor": {
+            "format": "{icon}",
+            "format-icons": {
+                "activated": "<span foreground='#34AA44'><b></b></span>",
+                "deactivated": ""
+            }
+        },
+        "temperature": {
+            "thermal-zone": 8,
+            "critical-threshold": 80,
+            "format": "{temperatureC}°C {icon}",
+            "format-icons": ["", "", ""]
+        },
+        "backlight": {
+            "format": "{percent}% {icon}",
+            "on-scroll-up": "light -A 2",
+            "on-scroll-down": "light -U 2",
+            "format-icons": ["", "", "", "", "", "", "", "", ""]
+        },
+        "battery": {
+            "states": {
+                "good": 90,
+                "warning": 30,
+                "critical": 15
+            },
+            "format": "{capacity}% {icon}",
+            "format-charging": "{capacity}% {icon} ",
+            "tooltip-format": "{capacity}% - {timeTo}",
+            "format-icons": ["", "", "", "", ""]
+        },
+        "bluetooth": {
+            "format": "{status} ",
+            "format-disabled": "off ",
+            "format-connected": "{num_connections} ",
+            "tooltip-format": "{controller_alias}\t{controller_address}",
+            "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
+            "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
+            "on-click": "blueman-manager"
+        },
+        "custom/kb": {
+            "tooltip": false,
+            "format": "󰌌",
+            "on-click": "$HOME/.config/waybar/custom_modules/open_kb.sh",
+            "escape": true
+        },
+        "custom/sp": {
+            "tooltip": false,
+            "format": "",
+            "on-click": "$HOME/.config/scripts/swap_scratchpad.sh",
+            "escape": true
+        },
+        "wlr/taskbar": {
+            "format": "{icon}",
+            "all-outputs": true,
+            "tooltip": false,
+            "on-click": "activate",
+            "on-click-right": "close"
         }
     },
-    "temperature": {
-        "thermal-zone": 8,
-        "critical-threshold": 80,
-        "format": "{temperatureC}°C {icon}",
-        "format-icons": ["", "", ""]
-    },
-    "backlight": {
-        "format": "{percent}% {icon}",
-        "on-scroll-up": "light -A 2",
-        "on-scroll-down": "light -U 2",
-        "format-icons": ["", "", "", "", "", "", "", "", ""]
-    },
-    "battery": {
-        "states": {
-            "good": 90,
-            "warning": 30,
-            "critical": 15
-        },
-        "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% {icon} ",
-        "tooltip-format": "{capacity}% - {timeTo}",
-        "format-icons": [" ", " ", " ", " ", " "]
-    },
-    "bluetooth": {
-        "format": "{status} ",
-        "format-disabled": "off ",
-        "format-connected": "{num_connections} ",
-        "tooltip-format": "{controller_alias}\t{controller_address}",
-        "tooltip-format-connected": "{controller_alias}\t{controller_address}\n\n{device_enumerate}",
-        "tooltip-format-enumerate-connected": "{device_alias}\t{device_address}",
-        "on-click": "blueman-manager"
-    },
-    "custom/kb": {
-        "tooltip": false,
-        "format": "󰌌",
-        "on-click": "$HOME/.config/waybar/custom_modules/open_kb.sh",
-        "escape": true
-    },
-    "custom/sp": {
-        "tooltip": false,
-        "format": "",
-        "on-click": "$HOME/.config/scripts/swap_scratchpad.sh",
-        "escape": true
-    },
-    "wlr/taskbar": {
-        "format": "{icon}",
-        "icon-size": 13,
-        "all-outputs": true,
-        "tooltip": false,
-        "on-click": "activate",
-        "on-click-right": "close"
-    }
-},
-{
-    //General
-    "layer": "top",
-    "position": "top",
-    "height": 30,
-    "spacing": 1,
-    "name": "waybar-top",
+    {
+        //General
+        "layer": "top",
+        "position": "top",
+        "height": 30,
+        "spacing": 1,
+        "name": "waybar-top",
 
-    //position
-    "modules-left": [
-        "custom/launch_app",
-        "hyprland/workspaces", 
-        "hyprland/submap"
-    ],
-    "modules-center":[
-        "hyprland/window"
-    ],
-    "modules-right": [
-        "tray",
-        "custom/notification",
-        "custom/powermenu"
-    ],
+        //position
+        "modules-left": [
+            "custom/launch_app",
+            "hyprland/workspaces", 
+            "hyprland/submap"
+        ],
+        "modules-center":[
+            "hyprland/window"
+        ],
+        "modules-right": [
+            "custom/kill",
+            "tray",
+            "custom/notification",
+            "custom/powermenu"
+        ],
 
-    //modules
-    "custom/launch_app": {
-        "tooltip": false,
-        "format": "󰀻",
-        "on-click": "sleep 0.5; $HOME/.config/scripts/icon_launcher.sh",
-        "escape": true
-    },
-    "hyprland/workspaces": {
-        "show-special": true,
-        "format": "{name}{icon}[{windows}]",
-        "sort-by": "id",
-        "format-icons":{
-            "special": "",
-            "active": ":",
-            "default": ":"
+        //modules
+        "custom/launch_app": {
+            "tooltip": false,
+            "format": "󰀻",
+            "on-click": "sleep 0.5; $HOME/.config/scripts/icon_launcher.sh",
+            "escape": true
         },
-        "format-window-separator": " ",
-        "window-rewrite-default": "",
-        "window-rewrite": {
-            "^[ ]*$": "",
-            "foot": "",
-            "thunar": "",
-            "brave-calendar.google.com__calendar_u_1_r-Default":"",
-            "brave-mail.google.com__mail_u_.-Default": "",
-            "brave-web.whatsapp.com__-Default": "",
-            "brave-to-do.live.com__tasks_today-Default": "",
-            "brave-keep.google.com__u_1_-Default": "󰛜",
-            "brave-ticktick.com__webapp_-Default": "",
-            "brave-browser": "󰖟",
-            "org.telegram.desktop": "",
-            "brave-open.spotify.com__-Default": "",
-            "spt": "",
-            "^Spotify Premium$": "",
-            "Spotify": ""
+        "hyprland/workspaces": {
+            "show-special": true,
+            "format": "{name} [{windows}]",
+            "sort-by": "id",
+            "format-icons":{
+                "special": "",
+                "active": ":",
+                "default": ":"
+            },
+            "format-window-separator": " ",
+            "window-rewrite-default": "",
+            "window-rewrite": {
+                "^[ ]*$": "",
+                "foot": "",
+                "thunar": "",
+                "brave-calendar.google.com__calendar_u_1_r-Default":"",
+                "brave-mail.google.com__mail_u_.-Default": "",
+                "brave-web.whatsapp.com__-Default": "",
+                "brave-to-do.live.com__tasks_today-Default": "",
+                "brave-keep.google.com__u_1_-Default": "󰛜",
+                "brave-ticktick.com__webapp_-Default": "",
+                "brave-browser": "󰖟",
+                "org.telegram.desktop": "",
+                "brave-open.spotify.com__-Default": "",
+                "spt": "",
+                "^Spotify Premium$": "",
+                "Spotify": ""
+            },
+            "on-scroll-up": "hyprctl dispatch workspace e+1",
+            "on-scroll-down": "hyprctl dispatch workspace e-1"
         },
-        "on-scroll-up": "hyprctl dispatch workspace e+1",
-        "on-scroll-down": "hyprctl dispatch workspace e-1"
-    },
-    "hyprland/submap": {
-        "format": "<span style=\"italic\">{}</span>"
-    },
-    "hyprland/window": {
-        "max-length": 100,
-        "separate-outputs": true,
-        "format": "{}",
-        "rewrite": {
-            "vim (.*)": "  $1",
-            "(.*) - Brave": "󰖟  $1"
+        "hyprland/submap": {
+            "format": "<span style=\"italic\">{}</span>"
+        },
+        "hyprland/window": {
+            "max-length": 100,
+            "separate-outputs": true,
+            "format": "{}",
+            "rewrite": {
+                "^vim (.*)": "<big></big> $1",
+                "^nvim (.*)": "<big></big> $1",
+                "(.*) - Brave$": "<big>󰖟</big> $1"
+            }
+        },
+        "custom/kill": {
+            "tooltip": false,
+            "format": "󰅗",
+            "on-click": "sleep 0.5; hyprctl dispatch submap kill; hyprctl kill; hyprctl dispatch submap reset",
+            "escape": true
+        },
+        "tray": {
+            "icon-size": 14,
+            "spacing": 10,
+            "show-passive-items": true
+        },
+        "custom/notification": {
+            "tooltip": false,
+            "format": "{icon}",
+            "format-icons": {
+                "notification-false": "<span foreground='red'><sup></sup></span>",
+                "none-false": "",
+                "notification-true": "<span foreground='red'><sup></sup></span>",
+                "none-true": "",
+            },
+            "return-type": "json",
+            "interval": 1,
+            "exec": "$HOME/.config/scripts/notification_check.sh",
+            "on-click": "sleep 0.5; dunstctl set-paused toggle",
+            "escape": true,
+            "max-length": 2
+        },
+        "custom/powermenu": {
+            "tooltip": false,
+            "format": "",
+            "on-click": "sleep 0.5; $HOME/.config/scripts/powermenu_launcher.sh",
+            "escape": true
         }
-    },
-    "tray": {
-        "icon-size": 14,
-        "spacing": 10,
-        "show-passive-items": true
-    },
-    "custom/notification": {
-        "tooltip": false,
-        "format": "{icon} ",
-        "format-icons": {
-            "notification-false": "<span foreground='red'><sup></sup></span>",
-            "none-false": "",
-            "notification-true": "<span foreground='red'><sup></sup></span>",
-            "none-true": "",
-        },
-        "return-type": "json",
-        "interval": 1,
-        "exec": "$HOME/.config/scripts/notification_check.sh",
-        "on-click": "sleep 0.5; dunstctl set-paused toggle",
-        "escape": true,
-        "max-length": 5
-    },
-    "custom/powermenu": {
-        "tooltip": false,
-        "format": "",
-        "on-click": "sleep 0.5; $HOME/.config/scripts/powermenu_launcher.sh",
-        "escape": true
-    }
-}]
+    }]
