--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -21,11 +21,12 @@ $selective_kill = ~/.config/scripts/selective_kill.sh
 
 $printscr_savepath = ~/Pictures/Screenshots/$(date +'%Y%m%d-%H%M%S')
 $printscr_fullscreen = grim
-$printscr_select = grim -g "$(slurp)"
-$printscr_sf = $printscr_fullscreen - | tee $(echo $printscr_savepath)-original.png | swappy -f -
-$printscr_f = $printscr_fullscreen - | tee $(echo $printscr_savepath)-full.png | wl_copy
-$printscr_ss = $printscr_select - | tee $(echo $printscr_savepath)-original.png | swappy -f -
-$printscr_sw = ~/.config/scripts/print_window.sh
+$printscr_open_swappy = tee $(echo $printscr_savepath)-original.png | swappy -f -
+
+$printscr_f = $printscr_fullscreen - | tee $(echo $printscr_savepath)-full.png | wl_copy; hyprctl notify 1 2500 "rgb($color1)" " Screenshot saved!"
+$printscr_sf = $printscr_fullscreen - | $printscr_open_swappy
+$printscr_ss = grim -g "$(slurp)" - | $printscr_open_swappy
+$printscr_sw = grim -g "$(~/.config/scripts/print_window.sh)" - | $printscr_open_swappy
 
 $scratchpad_name = 󰉇
 
@@ -234,7 +235,7 @@ bind  = SHIFT,    F11,                           exec,         playerctl positio
 
 # PRINT SCREEN
 
-bind=CONTROL SHIFT,Print, exec, $printscr_sw
+bind=CONTROL,Print, exec, $printscr_sw
 bind=SHIFT,Print, exec, $printscr_ss
 bind=SUPER, Print, exec, $printscr_f
 bind=,Print, exec, $printscr_sf
@@ -331,7 +332,7 @@ submap = resize
     bind =,          Escape, submap, reset
     bind = SUPER, W,      submap, reset
 
-    bind = , catchall, exec, hyprctl notify 4 1000 "rgb($color2)" "Unknown keymap!"
+    bind = , catchall, exec, hyprctl notify 4 2000 "rgb($color3)" " Unknown keymap!"
 submap = reset
 
 # WORKSPACE AND WINDOWS
