Reshuffle packages in modules

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -169,6 +169,10 @@ windowrule = float,                 ^(spotify)$
 windowrule = dimaround,             ^(spotify)$
 windowrule = center,                ^(spotify)$
 
+windowrule = float,                 ^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
+windowrule = dimaround,             ^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
+windowrule = center,                ^(brave-nngceckbapebfimnlniiiahkandclblb-Default)$
+
 windowrule = float,                 ^(xdg-desktop-portal-gtk)$
 windowrule = dimaround,             ^(xdg-desktop-portal-gtk)$
 windowrule = center,                ^(xdg-desktop-portal-gtk)$
